--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "start": "servor --reload"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "servor": "^4.0.2"
   }
 }
